syntax = "proto3";

option csharp_namespace = "Common.Protos";

package robotbackend;

/* https://learn.microsoft.com/en-us/aspnet/core/grpc/protobuf?view=aspnetcore-5.0 */
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service LocationProto {
  rpc AddLocation(AddLocationObj) returns (LocationId);

  rpc GetLocationById(google.protobuf.StringValue) returns (LocationResponse);

  rpc GetLocationByRobotId(google.protobuf.StringValue) returns (LocationResponse);

  rpc GetLocations(google.protobuf.Empty) returns (LocationsResponse);

  rpc FindLocations(google.protobuf.Empty) returns (LocationResponse);

  rpc DeleteLocation(LocationId) returns (google.protobuf.Empty);

  rpc UpdateLocation(LocationIdAndUpdate) returns (google.protobuf.Empty);

  rpc AddRobotToLocation(LocationIdAndRobotId) returns (google.protobuf.Empty);

  rpc RemoveRobotFromLocation(LocationIdAndRobotId) returns (google.protobuf.Empty);
}

////////// request objects //////////
message AddLocationObj {
  string name = 1;
  double x = 2;
  double y = 3;
}

message UpdateLocationObj {
  string name = 1;
  repeated string robotIds = 2;
}
////////// response objects //////////
message LocationResponse {
  string id = 1;
  string name = 2;
  double x = 3;
  double y = 4;
  repeated string robotIds = 5;
}

message LocationsResponse {
  repeated LocationResponse locations = 1;
}

message LocationId {
  string id = 1;
}

message LocationIdAndUpdate {
  string id = 1;
  UpdateLocationObj update = 2;
}

message LocationIdAndRobotId {
  string location_id = 1;
  string robot_id = 2;
}

