syntax = "proto3";

option csharp_namespace = "Backend.Protos";

package robotbackend;

/* https://learn.microsoft.com/en-us/aspnet/core/grpc/protobuf?view=aspnetcore-5.0 */
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

// The LocationObjFull message represents a location with full details
message LocationObjFull {
  string id = 1;
  string name = 2;
  double x = 3;
  double y = 4;
  repeated string robotIds = 5;
}

// The Robot message represents a robot
message RobotObj {
  string name = 1;
  string type = 2;
  string status = 3;
  LocationObjFull currentLocation = 4;
  repeated string previousLocationIds = 5;
}

message AddRobotObj {
  string name = 1;
  string type = 2;
  string status = 3;
  LocationObjFull currentLocation = 4;
}

// The RobotList message is a list of robots
message RobotList {
  repeated RobotObj robots = 1;
}

message RobotId {
  string id = 1;
}

message UpdateRobotRequest {
  string id = 1;
  LocationObjFull newLocation = 2;
}

// The RobotService service provides CRUD operations for robots
service RobotProto {
  // Add a new robot
  rpc AddRobot(AddRobotObj) returns (RobotId);

  // Get a specific robot
  rpc GetRobot(RobotId) returns (RobotObj);

  // Get a list of all robots
  rpc GetRobots(google.protobuf.Empty) returns (RobotList);

  // Update an existing robot
  rpc UpdateRobot(UpdateRobotRequest) returns (google.protobuf.Empty);

  // Delete a specific robot
  rpc DeleteRobot(RobotId) returns (google.protobuf.Empty);
}

