syntax = "proto3";

option csharp_namespace = "Backend";

package robotbackend;

/* https://learn.microsoft.com/en-us/aspnet/core/grpc/protobuf?view=aspnetcore-5.0 */
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

// The Robot message represents a robot
message Robot {
  string id = 1;
  string name = 2;
  string type = 3;
  string current_location = 4;
  repeated string previous_locations = 5;
}

// The RobotList message is a list of robots
message RobotList {
  repeated Robot robots = 1;
}

// The RobotService service provides CRUD operations for robots
service RobotProto {
  // Add a new robot
  rpc AddRobot(Robot) returns (Robot);

  // Get a specific robot
  rpc GetRobot(google.protobuf.StringValue) returns (Robot);

  // Get a list of all robots
  rpc GetRobots(google.protobuf.Empty) returns (RobotList);

  // Update an existing robot
  rpc UpdateRobot(Robot) returns (Robot);

  // Delete a specific robot
  rpc DeleteRobot(google.protobuf.StringValue) returns (google.protobuf.Empty);
}

